# opengl-wrapper

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/hello-world/: CMakeLists.txt
examples/hello-world/lib/: CMakeLists.txt
examples/hello-world/runtime/: triangle1.frag
examples/hello-world/runtime/shaders/: light.vert  object.frag  object.vert  square.frag  square.vert  triangle2.frag
examples/hello-world/src/: hello_world.cpp  integration.cpp  integration.h  main.cpp
include/game-engine/data_types/: camera.h  face.h  image.h  mesh.h  shape.h  types.h  window.h
include/game-engine/parsers/: obj_parser.h
include/game-engine/utils/: exception.h  utils.h
include/opengl-wrapper/: gl_manager.h  main_manager.h  renderer.h  texture_controller.h  window.h  window_manager.h
include/opengl-wrapper/data_types/: buffer.h  camera.h  face_vertex_indices.h  image.h  light.h  material.h  mesh.h  program.h  shader.h  shape.h  texture.h  transform.h  types.h  vertex.h  vertex_array.h  window.h
include/opengl-wrapper/exceptions/: exception.h  gl_error.h  glad_error.h  glfw_error.h  unregistered_window_error.h
include/opengl-wrapper/graphics/: graphics.h  ogl_graphics.h
include/opengl-wrapper/models/: shape.h  vertex.h
include/opengl-wrapper/parsers/: obj_parser.h
include/opengl-wrapper/textures/: image.h  texture.h  texture_controller.h
include/opengl-wrapper/utils/: exception.h  formatter.h  gl_error.h  glad_error.h  glfw_error.h  utils.h
include/opengl-wrapper/wraps/: api.h  buffer.h  buffer_controller.h  program.h  shader.h  vertex_array.h  vertex_array_controller.h  vertex_arrays.h  window.h
lib/: CMakeLists.txt
lib/glad/: README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: stb_image.h
runtime/shaders/: light.frag  object.frag
src/: CMakeLists.txt  gl_manager.cpp  integration.cpp  integration.h  main.cpp  main_manager.cpp  renderer.cpp  renderer.h  texture_controller.cpp  window.cpp  window_manager.cpp
src/data_types/: CMakeLists.txt  buffer.cpp  camera.cpp  camera.h  face.cpp  face_vertex_indices.cpp  image.cpp  light.cpp  material.cpp  mesh.cpp  mesh.h  program.cpp  shader.cpp  shape.cpp  shape.h  texture.cpp  transform.cpp  types.h  vertex.cpp  vertex_array.cpp  window.cpp  window.h
src/exceptions/: exception.cpp  gl_error.cpp  glad_error.cpp  glfw_error.cpp  unregistered_window_error.cpp
src/factories/: CMakeLists.txt  light_factory.cpp  light_factory.h  program_factory.cpp  program_factory.h  shape_factory.cpp  shape_factory.h  texture_factory.cpp  texture_factory.h
src/graphics/: graphics.cpp  ogl_graphics.cpp
src/managers/: CMakeLists.txt  light_manager.cpp  light_manager.h  shape_manager.cpp  shape_manager.h
src/models/: shape.cpp  vertex.cpp
src/parsers/: CMakeLists.txt  obj_parser.cpp  obj_parser.h
src/textures/: image.cpp  texture.cpp  texture_controller.cpp
src/utils/: CMakeLists.txt  configuration.h  exception.cpp  formatter.cpp  formatter.h  gl_error.cpp  glad_error.cpp  glfw_error.cpp  program_shapes.cpp  program_shapes.h
src/wraps/: api.cpp  buffer.cpp  buffer_controller.cpp  program.cpp  shader.cpp  vertex_array.cpp  vertex_array_controller.cpp  vertex_arrays.cpp  window.cpp
test/: CMakeLists.txt
test/runtime/: shader.vert
test/src/: buffer_test.cpp  mock_graphics.h  shader_test.cpp  test_buffer.cpp  test_obj_parser.cpp  test_shader.cpp  test_texture.cpp
